<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeightActivity">

    <Spinner
        android:id="@+id/spnFrom"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:entries="@array/weightUnits"
        android:scrollbarSize="4dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtTo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputWeight"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inputWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:hint="@string/hint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTo"
        android:layout_width="39dp"
        android:layout_height="46dp"
        android:layout_marginTop="72dp"
        android:text="@string/txtTo"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputWeight" />

    <Spinner
        android:id="@+id/spnTo"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:dropDownWidth="wrap_content"
        android:entries="@array/weightUnits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTo" />

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:text="@string/txtBtnConvert"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/txtBtnConvert" />

    <TextView
        android:id="@+id/txtResults"
        android:layout_width="252dp"
        android:layout_height="55dp"
        android:layout_marginBottom="35dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/btnConvert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnTo"
        app:layout_constraintVertical_bias="0.858" />

    <TextView
        android:id="@+id/titleWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="@string/titleWeight"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>